# tap-mysql

./: .gitignore  .veracode-exclusions  CHANGELOG.md  Pipfile  README.md  pyproject.toml  setup.py
.github/workflows/: veracode-static-scan.yml
tap_mysql/: __init__.py  connection.py
tap_mysql/sync_strategies/: common.py  full_table.py
tests/: test_connection_ssl.py
