[tool.poetry]
name = "tap-mysql"
version = "1.17.11"
description = "Singer.io tap for extracting data from MySQL"
authors = ["Stitch"]
classifiers = ['Programming Language :: Python :: 3 :: Only']

[tool.poetry.dependencies]
python = "^3.7"
attrs = "16.3.0"
pendulum = "1.2.0"
singer-python = "5.9.0"
PyMySQL = "0.9.3"
backoff = "1.8.0"
mysql-replication = "0.22"
cryptography = ">=39,<42"

[tool.poetry.dev-dependencies]
pylint = "2.8.3"

[tool.poetry.scripts]
tap-mysql = "tap_mysql:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
