[tool.poetry]
name = "tap-mysql"
version = "3.0.0"
description = "Singer.io tap for extracting data from MySQL"
authors = ["Stitch"]
classifiers = ['Programming Language :: Python :: 3 :: Only']

[tool.poetry.dependencies]
python = "^3.13.0"
pendulum = "3.1.0"
singer-python = "6.3.0"
PyMySQL = "1.1.2"
backoff = "2.2.1"
mysql-replication = "^1.0"

[tool.poetry.dev-dependencies]
pylint = "2.8.3"

[tool.poetry.scripts]
tap-mysql = "tap_mysql:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
